# DeepQuote

./: .gitignore  CMakeLists.txt  README.md  setup.py
include/core/: order.h  types.h
include/market/: market_events.h  market_maker.h  market_simulator.h  matching_engine.h  order_book.h  rl_trader.h  trader.h
include/strategies/: market_making_strategy.h  mean_reversion_strategy.h  pairs_trading_strategy.h  trading_strategy.h
python_rl/: README.md  agents.py  debug_agent_actions.py  debug_order_validation.py  deepquote_env.py  demo.py  demo_cpp_integration.py  environment.py  requirements.txt  train.py
src/bindings/: python_bindings.cpp
src/core/: order.cpp  types.cpp
src/market/: market_events.cpp  market_maker.cpp  market_simulator.cpp  matching_engine.cpp  order_book.cpp  rl_trader.cpp  trader.cpp
src/strategies/: market_making_strategy.cpp  mean_reversion_strategy.cpp  pairs_trading_strategy.cpp  trading_strategy.cpp
